--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -4,7 +4,7 @@
         <title>Bang With Friends</title>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700' rel='stylesheet' type='text/css'>
         <link href="/static/css.css" media="all" rel="stylesheet" type="text/css" />
-        <script src="/assets/application-a57643f20510b1ec7b8b29657e87ecfb.js" type="text/javascript"></script>
+        <link href="/static/css/style.css" media="all" rel="stylesheet" type="text/css" />
 
         <link href="/static/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
@@ -12,24 +12,31 @@
         <meta content='http://bangbangbang.ru' property='og:url'>
         <meta content='Bang Your Friends' property='og:title'>
         <meta content='Find your friends with benefits' property='og:description'>
+        
+        <script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript"></script>
+        <script src="/static/js/oauth.js" type="text/javascript"></script>
+
+        {% block css %}{% endblock %}
+        {% block js %}{% endblock %}
     </head>
     <body>
+        <div id="vk_api_transport"></div>
         <header>
-        <div>
-            <a href='/fuck'>
-                <img alt="Logo_header" src="/static/logo.png" />
-                <h1>Bang With Friends</h1>
-            </a>
-        </div>
-        <ul>
-            <li>
-            <a href='/fuck/how'>
-                How it Works
-            </a>
-            </li>
-            <li>
-            </li>
-        </ul>
+            <div>
+                <a href='/fuck'>
+                    <img alt="Logo_header" src="/static/logo.png" />
+                    <h1>Bang With Friends</h1>
+                </a>
+            </div>
+            <ul>
+                <li>
+                <a href='/fuck/how'>
+                    How it Works
+                </a>
+                </li>
+                <li>
+                </li>
+            </ul>
         </header>
         {% block content %}{% endblock %}
     </body>
